# proyecto-lang

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  a  a.c  build.zig  format.fish
entradas/: entrada.pas  entrada.txt  entrada2.pas  entrada2.txt  entrada3.pas  entrada3.txt  entrada4.pas
scripts/: clean.sh  copy_lexer.sh  format.sh
src/: err.c  grammar.c  grammar.y  hashset.c  hashset.h  lexer.c  lexer.l  main.c  node.c  node.h  panic.c  panic.h  parser.c  parser.h  str.c  str.h  symbol.c  symbol.h  tree.c  tree.h  vector.c  vector.h
src/include/: err.h  grammar.h  hashset.h  parser.h  str.h  token.h  vector.h
test/: hash_test.c  main.c  str_test.c  tree_test.c  vec_test.c
